<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TemperaturaFragment">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/eTcelsius"
            android:hint="@string/celsius"
            android:gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btconverter"
            android:layout_below="@+id/eTcelsius"
            android:layout_centerHorizontal="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/eTfahrenheit"
            android:hint="@string/fahrenheit"
            android:layout_below="@+id/btconverter"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"/>


</RelativeLayout>